--- a/style.css
+++ b/style.css
@@ -61,22 +61,30 @@ body {
 	text-transform: uppercase;
 	font-size: 6em;
 	top: 0;
-	clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	-webkit-clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	        clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	transition: -webkit-clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
 	transition: clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
+	transition: clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32), -webkit-clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
 }
 
 .title:hover .title__filled {
-	clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
+	-webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
+	        clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
 }
 
 .title:hover .title__underline {
 	top: 0;
-	clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	-webkit-clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	        clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
+	transition: -webkit-clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
 	transition: clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
+	transition: clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32), -webkit-clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
 }
 
 .title:hover .title__filled {
-	clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
+	-webkit-clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
+	        clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
 }
 
 .title:hover .title__underline {
